--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,13 @@
   </div>
   <footer>
     <ul>
+      <p class="feed-subscribe">
+        <a href="/minima/feed.xml">
+          <svg class="svg-icon orange">
+            <use xlink:href="/minima/assets/minima-social-icons.svg#rss"></use>
+          </svg><span>Subscribe</span>
+        </a>
+      </p>
     <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
     <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
     </ul>
