--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,18 +3,15 @@
 <head>
   <title>{{ page.title }}</title>
   <link rel="stylesheet" type="text/css" href="/css/main.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <script href="/js/note.js"></script> -->
+  {% include mathjax.html %}
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="/cv">CV</a></li>
-      <li><a href="/blog">Blog</a></li>
-    </ul>
-  </nav>
+  <nav><ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/about">About</a></li>
+  </ul></nav>
   <div class="wrapper">
     <section>
       <div id="title">
@@ -27,18 +24,9 @@
       {{ content }}
     </section>
   </div>
-  <footer>
-    <ul>
-      <p class="feed-subscribe">
-        <a href="/minima/feed.xml">
-          <svg class="svg-icon orange">
-            <use xlink:href="/minima/assets/minima-social-icons.svg#rss"></use>
-          </svg><span>Subscribe</span>
-        </a>
-      </p>
-    <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-    <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-    </ul>
-   </footer>
+  <footer><ul>
+    <li><a href="mailto:hugov@runbox.com">email</a></li>
+    <li><a href="atom.xml">feed</a></li>
+  </ul></footer>
 </body>
 </html>
