--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,14 @@
     type="text/javascript"
     charset="utf-8"
     src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
-  >
+  > /*
+	https://docs.mathjax.org/en/v2.7-latest/config-files.html#common-configurations
+	TeX-MML-AM_CHTML: TeX|MathML|AsciiMath ==> HTML
+	TeX-MML-AM_HTMLorMML config: : TeX|MathML|AsciiMath ==> HTML|MML
+	* AM_CHTML:  AsciiMath ==> HTML
+});
+})
+	*/
   </script>
   <script
     type="text/javascript"
