--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
   <script
     type="text/javascript"
     charset="utf-8"
-    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_CHTML"
   > /*
 	https://docs.mathjax.org/en/v2.7-latest/config-files.html#common-configurations
 	TeX-MML-AM_CHTML: TeX|MathML|AsciiMath ==> HTML
