--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,24 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <script href="/js/note.js"></script> -->
 	{% if page.mathjax %}
-	<script>
-		MathJax = {
-			loader: {load: ['input/asciimath', 'output/chtml', 'ui/menu']},
-			asciimath: { delimiters: [['$','$'], ['`','`']] },
-			tex: { inlineMath: [['$', '$'], ['\\(', '\\)']] }
-		}
+	<script async
+		src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML-full">
 	</script>
-	<script type="text/javascript" id="MathJax-script" async
-		src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">//tex-chtml:: input/tex + output/chtml + startup
-	</script>
-	<script type="text/javascript" id="MathJax-script" async
-		src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-	</script>
-  <script
+  <!-- <script
     type="text/javascript"
     charset="utf-8"
 		src="https://vincenttam.github.io/javascripts/MathJaxLocal.js">
-	</script>
+	</script> -->
   {% endif %}
 </head>
 <body>
