mathjax fails forever

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,11 @@
 	<script async
 		src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML-full">
 	</script>
-  <!-- <script
+  <script
     type="text/javascript"
     charset="utf-8"
 		src="https://vincenttam.github.io/javascripts/MathJaxLocal.js">
-	</script> -->
+	</script>
   {% endif %}
 </head>
 <body>
