--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,8 @@ body{
 	font-weight:normal;
 	background:#252525;
 	color:#eaeaea;
-	font-size:14px;
-	line-height:1.5;
+	font-size:16px;
+	line-height:1.3;
 	font-family:Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace
 }
 
@@ -17,10 +17,10 @@ a:hover { text-decoration: underline; }
 p, ul { font-size: 1.5em; line-height: 1.4em; }
 
 h1, h2, h3, h4 { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
-h1 { font-size: 3em;  }
-h2 { font-size: 2.7em; }
-h3 { font-size: 2.3em; }
-h4 { font-size: 1.9em; }
+h1 { font-size: 1.7em;  }
+h2 { font-size: 1.4em; }
+h3 { font-size: 1.2em; }
+h4 { font-size: 1em; }
 
 nav ul, footer ul { font-size: 1em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; }
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
@@ -28,11 +28,11 @@ nav ul li, footer ul li { display: inline; margin-right: 20px; }
 footer { border-top: 1px solid #d5d5d5; font-size: .8em; }
 
 /* Blog */
-ul.posts { margin: 20px auto 40px; font-size: 1.5em; }
+ul.posts { margin: 20px auto 40px; font-size: 1.2em; }
 ul.posts li { list-style: none; }
 
 /* rouge */
-pre{background:rgba(0,0,0,0.9);border:1px solid rgba(255,255,255,0.15);padding:10px;font-size:16px;color:#b5e853;border-radius:2px;word-wrap:normal;overflow:auto;overflow-y:hidden}
+pre{background:rgba(0,0,0,0.9);border:1px solid rgba(255,255,255,0.15);padding:10px;font-size:1em;color:#b5e853;border-radius:2px;word-wrap:normal;overflow:auto;overflow-y:hidden}
 code.highlighter-rouge{background:rgba(0,0,0,0.9);border:1px solid rgba(255,255,255,0.15);padding:0px 3px;margin:0px -3px;color:#aa759f;border-radius:2px}
 .highlight{color:#d0d0d0}
 .highlight table td{padding:5px}
