--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body{
 	margin:0;
 	padding:0;
+	font-family: 'Helvetica', 'Arial', 'Sans-Serif';
 	font-weight:normal;
 	background:#252525;
 	color:#eaeaea;
@@ -9,6 +10,8 @@ body{
 	font-family:Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace
 }
 
+.floatright{float:right}
+
 section img{max-width:100%}
 
 a { text-decoration: none; color: #999; }
@@ -16,16 +19,15 @@ a:hover { text-decoration: underline; }
 
 p, ul { font-size: 1em; line-height: 1.4em; }
 
-h1, h2, h3, h4 { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
 h1 { font-size: 1.3em;  }
 h2 { font-size: 1.2em; }
 h3 { font-size: 1.1em; }
 h4 { font-size: 1em; }
 
-nav ul, footer ul { font-size: 1em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; }
+nav ul, footer ul { font-size: 1em; padding: 0px; list-style: none; font-weight: bold; }
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
-
-footer { border-top: 1px solid #d5d5d5; font-size: .8em; }
+nav { border-bottom: 1px solid #d5d5d5; }
+footer { border-top: 1px solid #d5d5d5; }
 
 /* Blog */
 ul.posts { margin: 20px auto 40px; font-size: 1em; }
