--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,9 +40,9 @@
   </div>
   <footer><ul>
     <li><a href="mailto:hugov@runbox.com">hugov@runbox.com</a></li>
-		<li><a href="/feed.xml">rss feed</a></li>
-		<li class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></li>
-		<li class="floatright">Hosted on <a href="{{ site.github.repository_url }}">GitHub Pages</a></li>
+		<li><a href="/feed.xml">feed.xml(rss)</a></li>
+		<li class="credits left"><a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></li>
+		<li class="floatright"><a href="{{ site.github.repository_url }}">source</a></li>
   </ul></footer>
 </body>
 </html>
