--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,10 +39,15 @@
     </section>
   </div>
   <footer><ul>
-    <li><a href="mailto:hugov@runbox.com">hugov@runbox.com</a></li>
-		<li><a href="/feed.xml">feed.xml(rss)</a></li>
-		<li class="credits left"><a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></li>
-		<li class="floatright"><a href="{{ site.github.repository_url }}">source</a></li>
-  </ul></footer>
+		<li><a href="/feed.xml"><svg xmlns="http://www.w3.org/2000/svg"
+				viewBox="0 0 8 8" width="256" height="256"
+				style: "fill:white;stroke:none">
+			<circle cx="2" cy="6" r="1" />
+			<path   d="m 1,4 a 3,3 0 0 1 3,3 h 1 a 4,4 0 0 0 -4,-4 z" />
+			<path   d="m 1,2 a 5,5 0 0 1 5,5 h 1 a 6,6 0 0 0 -6,-6 z" />
+		</svg></a></li>
+		<li><a href="mailto:hugov@runbox.com">hugov@runbox.com</a></li>
+		<li><a href="{{ site.github.repository_url }}">source</a></li>
+	</ul></footer>
 </body>
 </html>
