--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
     </section>
   </div>
   <footer><ul>
-		<li><a href="/feed.xml"><svg xmlns="http://www.w3.org/2000/svg"
+		<li><a href="/feed.xml" class="icon"><svg xmlns="http://www.w3.org/2000/svg"
 				viewBox="0 0 8 8" width="256" height="256"
 				style: "fill:white;stroke:none">
 			<circle cx="2" cy="6" r="1" />
