--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,10 @@ body{
 	line-height:1.3;
 	font-family:Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace
 }
-
+.icon svg {
+  height: 1em;
+  width: 1em;
+}
 .floatright{float:right}
 
 section img{max-width:100%}
