--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,14 @@
     charset="utf-8"
 		src="https://vincenttam.github.io/javascripts/MathJaxLocal.js">
 	</script>
+	{% endif %}
+	{% if page.tex %}
+	<script>
+		MathJax = { tex: { inlineMath: [['$', '$'], ['`', '`']] } }
+	</script>
+  <script type="text/javascript" id="MathJax-script" async
+  	src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+	</script>
   {% endif %}
 </head>
 <body>
@@ -39,9 +47,7 @@
     </section>
   </div>
   <footer><ul>
-		<li><a href="/feed.xml" class="icon"><svg xmlns="http://www.w3.org/2000/svg"
-				viewBox="0 0 8 8" width="256" height="256"
-				style: "fill:white;stroke:none">
+		<li><a href="/feed.xml" class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 8" width="256" height="256">
 			<circle cx="2" cy="6" r="1" />
 			<path   d="m 1,4 a 3,3 0 0 1 3,3 h 1 a 4,4 0 0 0 -4,-4 z" />
 			<path   d="m 1,2 a 5,5 0 0 1 5,5 h 1 a 6,6 0 0 0 -6,-6 z" />
