--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,12 @@
   </div>
   <footer><ul>
 		<li><a href="/feed.xml" class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 8" width="256" height="256">
+			<style>
+				* {
+					fill: white;
+					stroke: none;
+				}
+			</style>
 			<circle cx="2" cy="6" r="1" />
 			<path   d="m 1,4 a 3,3 0 0 1 3,3 h 1 a 4,4 0 0 0 -4,-4 z" />
 			<path   d="m 1,2 a 5,5 0 0 1 5,5 h 1 a 6,6 0 0 0 -6,-6 z" />
