--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,9 @@ body{
 img.emoji { vertical-align: middle; /* display: inline-table; vertical-align: middle; */ }
 .floatright { float:right; }
 
-section img { max-width:100%; }
+p img { max-width:100%; }
+tr img { max-width:50%; }
+
 
 a { text-decoration: none; color: #999; }
 a:hover { text-decoration: underline; }
