--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ img.emoji { vertical-align: middle; /* display: inline-table; vertical-align: mi
 .floatright { float:right; }
 
 img { max-width:100%; }
-table { max-width:100%; }
+table { max-width:100%; table-layout: fixed; }
 
 
 a { text-decoration: none; color: #999; }
