--- a/_lib/water-dark2.css
+++ b/_lib/water-dark2.css
@@ -188,15 +188,15 @@ blockquote cite {
 address {
   font-style: normal;
 }
-
 a[href^='mailto\:']::before {
   content: '📧 ';
 }
-
+a[href^='geo\:']::before {
+  content: '📌 ';
+}
 a[href^='tel\:']::before {
   content: '📞 ';
 }
-
 a[href^='sms\:']::before {
   content: '💬 ';
 }
