--- a/_src/main.css
+++ b/_src/main.css
@@ -15,3 +15,77 @@ input[type="radio"][name=langswap]:checked+span {
 	color: #ffbe85;
 	border-radius: 3px;
 }
+
+/*
+https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.min.css
+https://cdn.jsdelivr.net/npm/water.css@2/out/water.css
+https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css
+https://unpkg.com/@picocss/pico@latest/css/pico.min.css
+https://unpkg.com/chota@latest
+https://cdn.jsdelivr.net/npm/@exampledev/new.css@1/new.min.css
+
+
+:root {
+  --background-body: #202b38;
+  --background: #161f27;
+  --background-alt: #1a242f;
+  --selection: #1c76c5;
+  --text-main: #dbdbdb;
+  --text-bright: #fff;
+  --text-muted: #a9b1ba;
+  --links: #41adff;
+  --focus: #0096bfab;
+  --border: #526980;
+  --code: #ffbe85;
+  --animation-duration: 0.1s;
+  --button-hover: #324759;
+  --scrollbar-thumb: var(--button-hover);
+  --scrollbar-thumb-hover: color-mod(var(--scrollbar-thumb) lightness(+8%));
+  --form-placeholder: #a9a9a9;
+  --form-text: #fff;
+  --variable: #d941e2;
+  --highlight: #efdb43;
+  --select-arrow: svg-load('./assets/select-arrow.svg', fill: #efefef);
+}
+
+:root {
+	--invalid:                 #943838;
+	--spacing-gutter:               1rem;
+}
+
+figure {
+	margin: 0;
+}
+
+/// moz ///
+
+aside {
+	/// width: 40%; ///
+	padding-left: .5rem;
+	margin-left: .5rem;
+	float: right;
+	box-shadow: inset 5px 0 5px -5px #29627e;
+	font-style: italic;
+}
+
+/// from chota ///
+del {
+  color: var(--invalid);
+}
+
+/// from pico ///
+nav {
+	display: flex;
+	justify-content: space-between;
+}
+
+nav a {
+  display: block;
+  margin: calc(var(--spacing-gutter) * -1) calc(var(--spacing-gutter) * -0.5);
+  padding: var(--spacing-gutter) calc(var(--spacing-gutter) / 2);
+  border-radius: var(--block-round);
+  text-decoration: none;
+}
+
+
+*/
