--- a/_lib/water-dark2.css
+++ b/_lib/water-dark2.css
@@ -60,7 +60,7 @@ button {
     transform var(--animation-duration) ease;
 }
 
-input {
+/* input {
   transition:
     background-color 0.1s linear,
     border-color 0.1s linear,
@@ -73,9 +73,9 @@ input {
     color var(--animation-duration) linear,
     box-shadow var(--animation-duration) linear,
     transform var(--animation-duration) ease;
-}
+} */
 
-textarea {
+/* textarea {
   transition:
     background-color 0.1s linear,
     border-color 0.1s linear,
@@ -88,7 +88,7 @@ textarea {
     color var(--animation-duration) linear,
     box-shadow var(--animation-duration) linear,
     transform var(--animation-duration) ease;
-}
+} */
 
 h1 {
   font-size: 2.2em;
@@ -323,10 +323,10 @@ textarea:not([cols]) {
   width: 100%;
 }
 
-textarea:not([rows]) {
+/* textarea:not([rows]) {
   min-height: 40px;
   height: 140px;
-}
+} */
 
 select {
   background: #161f27 url("data:image/svg+xml;charset=utf-8,%3C?xml version='1.0' encoding='utf-8'?%3E %3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' height='62.5' width='116.9' fill='%23efefef'%3E %3Cpath d='M115.3,1.6 C113.7,0 111.1,0 109.5,1.6 L58.5,52.7 L7.4,1.6 C5.8,0 3.2,0 1.6,1.6 C0,3.2 0,5.8 1.6,7.4 L55.5,61.3 C56.3,62.1 57.3,62.5 58.4,62.5 C59.4,62.5 60.5,62.1 61.3,61.3 L115.2,7.4 C116.9,5.8 116.9,3.2 115.3,1.6Z'/%3E %3C/svg%3E") calc(100% - 12px) 50% / 12px no-repeat;
