--- a/_src/main.css
+++ b/_src/main.css
@@ -4,6 +4,13 @@ body {
 	max-width: initial;
 }
 
+i svg {
+	width: 1.5em;
+	height: 1.5em;
+	vertical-align: middle;
+	fill: white;
+}
+
 input[type="radio"][name=datalang] {
 	display:none;
 }
